--- a/bibtag.man
+++ b/bibtag.man
@@ -32,7 +32,7 @@ to print a short help file.
 
 The input file name(s), if given, must be the first argument(s) to
 bibtag.  More than one input file may be specified; this is equivalent
-to processing the concatentation of the specified input files.
+to processing the concatenation of the specified input files.
 If no input file name is specified, the input is read from stdin.
 
 The ordering of the options is important: each argument is processed 
@@ -75,7 +75,7 @@ The new citation tag can be constructed using the following fields:
    -- literal text strings (-ltext)
    -- check digits (-c)
    -- a suffix to make the tag unique in the file. (-u)
-   -- a previously exisiting suffix to the tag (-e)
+   -- a previously existing suffix to the tag (-e)
    -- the previous tag (-p)
 
 For example, specifying the options
@@ -347,8 +347,7 @@ to other platforms is not guaranteed...
 
 .SH VERSION
 1.0
-.SH AUHTOR
+.SH AUTHOR
 Ronald L. Rivest (rivest@theory.lcs.mit.edu)
 .SH DATE
 June 4, 1995
-
